small changes to report structure

--- a/report/report.tex
+++ b/report/report.tex
@@ -48,14 +48,17 @@
 The scope of this document is to explain the design choice we have have made during the development of our project: a version of Tetris working from a terminal console, that is executed on an external microcontroller integrated circuit. 
 It will also contains all the reference to better understand the structure of the code.
 
-\section{Design and Interfaces}
+\section{Design}
 
+\subsection{Interfaces Diagram}
 \begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth]{img/InterafcesDiagram.pdf}
     \caption{Interfaces Diagram of the project.}
     \label{fig:gather}
 \end{figure}
+
+\subsection{Sequence Diagram}
 
 \section{Target Platform}
 
