--- a/report/references.bib
+++ b/report/references.bib
@@ -13,3 +13,9 @@
     title =        "Introduction to C++",
     year =         "2020",
 }
+
+@article{slidebaremetal,
+    author =       "Terraneo Federico",
+    title =        "Bare Metal Programming",
+    year =         "2020",
+}
